infrastructure/mojaloop/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hn-nodes-custom
  namespace: mojaloop
spec:
  podSelector: {}  # applies to all pods in the namespace
  policyTypes:
  - Ingress
  ingress:
  - {}  # empty rule allows all ingress


# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: hn-nodes-custom
#   namespace: mojaloop
# spec:
#   podSelector: {}  # applies to all pods in the namespace
#   policyTypes:
#   - Ingress
#   ingress:
#   - from:
#     - ipBlock:
#         cidr: 10.1.43.0/24
